# socra_bot_streamlit

./: README.md  Supervisor_sb.ipynb  config.py  logger.py  main.py  main_2.py  pyproject.toml  requirements.txt  sc_logic_2  socrabot_logic_2.py  socratic_bot_logic.py  supervisor_socra bot_logic.py
bot_test/: Socbot_logic_3.ipynb  app.py  app_2.py  config.py  main_2.py  new_test.py  sb_logic.py  socratic_bot_2.py  socratic_bot_logic.py  streamlit_2.py  streamlit_test.py  terminal.py
