[project]
name = "socra-bot-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipy>=1.1",
    "kernel>=0.6.4",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
